--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
       </div>
     </div>
-    <img id="logo" src="./images/imagePlus-logo.png" alt="" />
+   <a href="https://sa1nick.github.io/imagePlus/"> <img id="logo" src="./images/imagePlus-logo.png" alt="" /></a>
     <section class="search">
       <div class="content">
         <h1>Image Gallery Search With JavaScript</h1>
